--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
     <title>Cinny</title>
     <meta name="name"        content="Cinny">
     <meta name="author"      content="Ajay Bura">
-    <meta name="description" content="Yet another Matrix client. Where you can enjoy the conversation using simple, elegant and secure interface protected by e2ee with the power of open source.">
+    <meta name="description" content="A Matrix client where you can enjoy the conversation using simple, elegant and secure interface protected by e2ee with the power of open source.">
     <meta name="keywords"    content="cinny, cinnyapp, cinnychat, matrix, matrix client, matrix.org, element">
   
     <meta property="og:title"       content="Cinny">
     <meta property="og:url"         content="https://cinny.in">
     <meta property="og:image"       content="https://cinny.in/assets/favicon-48x48.png">
-    <meta property="og:description" content="Yet another Matrix client. Where you can enjoy the conversation a using simple, elegant and secure interface protected by e2ee with the power of open source.">
+    <meta property="og:description" content="A Matrix client where you can enjoy the conversation using simple, elegant and secure interface protected by e2ee with the power of open source.">
     <meta name="theme-color" content="#000000">
 </head>
 <body id="appBody">
