Load sound file on startup (#444)

--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,11 @@
 </head>
 <body id="appBody">
     <div id="root"></div>
+    <audio id="notificationSound">
+        <source src="./sound/notification.ogg" type="audio/ogg" />
+    </audio>
+    <audio id="inviteSound">
+        <source src="./sound/invite.ogg" type="audio/ogg" />
+    </audio>
 </body>
 </html>
