--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinny</title>
-    <meta name="name"        content="Cinny">
+    <meta name="name"        content="Nexus">
     <meta name="author"      content="Ajay Bura">
     <meta name="description" content="A Matrix client where you can enjoy the conversation using simple, elegant and secure interface protected by e2ee with the power of open source.">
     <meta name="keywords"    content="cinny, cinnyapp, cinnychat, matrix, matrix client, matrix.org, element">
-  
-    <meta property="og:title"       content="Cinny">
+
+    <meta property="og:title"       content="Nexus">
     <meta property="og:url"         content="https://cinny.in">
     <meta property="og:image"       content="https://cinny.in/assets/favicon-48x48.png">
     <meta property="og:description" content="A Matrix client where you can enjoy the conversation using simple, elegant and secure interface protected by e2ee with the power of open source.">
