--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#000000">
 
 
-    <link id="favicon" rel="shortcut icon" href="./res/svg/cinny.svg" />
+    <link id="favicon" rel="shortcut icon" href="./favicon.ico" />
 
     <link rel="manifest" href="./manifest.json" />
     <meta name="mobile-web-app-capable" content="yes" />
