--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     <meta name="theme-color" content="#000000" />
 
     <link id="favicon" rel="shortcut icon" href="./public/favicon.ico" />
+		
+		<!--service worker for pwa functionality-->
+		<script>
+			if('serviceWorker' in navigator) {
+				navigator.serviceWorker.register('/sw.js', { scope: '/' });
+			}
+			</script>
 
     <link rel="manifest" href="./manifest.json" />
     <meta name="mobile-web-app-capable" content="yes" />
